# langchain_tradutor

./: .env  .gitignore  README.md  codigo copy.py  codigo.py  pyproject.toml  requirements.txt
